# kalsengi

./: .gitignore  .gitmodules  CMakeLists.txt
src/: camera.cpp  camera.h  glReadPixels.cpp  imgui_impl_glfw_gl3.cpp  logger.cpp  logger.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  quad.h  shader.cpp  shader.h  time.cpp  time.h  window.cpp  window.h
src/shaders/: 01.frag.glsl  01.vert.glsl
